# DesignPattern_Modern_CPP

./: .gitignore  README.md
SOLID_Desing_Principles/: CMakeLists.txt  single_responsibility_principle_main.cpp
